# cpp_design_patterns

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  renamer.py
CMake/: cmakepp.cmake
absfactory/: abs_char.hh  abs_char.hpp  abs_factory.hh  abs_factory.hpp  abs_num.hh  lower_char.hh  lower_char.hpp  main.cc  negative_lower_factory.hh  negative_lower_factory.hpp  negative_num.hh  negative_num.hpp  positive_num.hh  positive_num.hpp  positive_upper_factory.hh  positive_upper_factory.hpp  upper_char.hh  upper_char.hpp
adapter/: adaptee.hh  class_adapter.hh  class_adapter.hpp  main.cc  object_adapter.hh  object_adapter.hpp  target.hh  target.hpp
bridge/: CMakeLists.txt
builder/: chinese_builder.hh  chinese_builder.hpp  cook.hh  cook.hpp  indian_builder.hh  indian_builder.hpp  main.cc  meal.cc  meal.hh  meal_builder.hh  meal_builder.hpp  mexican_builder.hh  mexican_builder.hpp
chain_of_responsibility/: main.cc  managers.cc  managers.hh  managers.hpp  request.hh  request.hpp
command/: CMakeLists.txt
composite/: composite.cc  composite.hh  composite.hpp  main.cc
decorator/: component.hh  concrete_component.hh  decorator.cc  decorator.hh  decorator.hpp  main.cc  one_decorator.cc  one_decorator.hh  one_decorator.hpp
facade/: dateprinter.cc  dateprinter.hh  dateprinter.hpp  datetimeprinter.cc  datetimeprinter.hh  datetimeprinter.hpp  main.cc  timeprinter.cc  timeprinter.hh
factory/: abs_factory.hh  abs_factory.hpp  f1.hh  f1.hpp  f2.hh  f2.hpp  main.cc
flyweight/: con_fly_weight.cc  con_fly_weight.hh  con_fly_weight.hpp  factory.cc  factory.hh  factory.hpp  fly_weight.hh  main.cc
idioms/: PolicyClass.cc  PolicyVsInheritanceTiming.cc  attorney-client.cc  boost-mutant.cc  cdt.cc  coercionByMember.cc  coercionByMember0.cc  countedBody.cc  crtp.cc  emptyBaseOpt.cc  expr_template.cc  inner_class.cc  int_to_type.cc  make_new_friends.cc  mixin.cc  proxy.cc
interpreter/: CMakeLists.txt  ctx.hh  ctx.hpp  expr.hh  expr.hpp  expr_add.cc  expr_add.hh  expr_add.hpp  expr_mul.cc  expr_mul.hh  expr_mul.hpp  main.cc
iterator/: aggregator.hh  aggregator.hpp  iterator.hh  iterator.hpp  main.cc
mediator/: main.cc  mediator.cc  mediator.hh  mediator.hpp  telephone.cc  telephone.hh  telephone.hpp
memento/: care_taker.hh  care_taker.hpp  main.cc  memonto.hh  memonto.hpp  oringinator.hh  oringinator.hpp
observer/: main.cc  observer.cc  observer.hh  observer.hpp  worker.cc  worker.hh  worker.hpp
prototype/: main.cc  (+4 more)
(+74 files in other folders)
